2005-11-17  Jan Beulich  <jbeulich@novell.com>

	* gas/all/cond.s: Also check ifdef works on equates and
	commons.
	* gas/all/cond.l: Adjust.
	* gas/all/redef2.s: Also test redefining equate to label.
	* gas/all/redef2.d: Adjust.
	* gas/all/redef3.[sd]: New.
	* gas/all/redef4.s: New.
	* gas/all/redef5.s: New.
	* gas/elf/redef.s: New, copied from original gas/all/redef2.s.
	* gas/elf/redef.d: Remove #source.
	* gas/all/gas.exp: Remove exclusion of iq2000-*-* from and
	adjust xfails for redefinition tests. Run new tests. Exclude
	alpha*-*-*, mips*-*-*, *c54x*-*-* from weakref tests.

2005-11-16  Richard Henderson  <rth@redhat.com>

	* gas/all/weakref1.s: Use "=" instead of ".set" for equivalence.

2005-11-15  Daniel Jacobowitz  <dan@codesourcery.com>

	* gas/arm/unwind.s, gas/arm/unwind.d, gas/arm/unwind_vxworks.d: Add
	a test for saving only the low registers.

2005-11-14  Thiemo Seufer  <ths@networkno.de>

	* gas/testsuite/gas/mips/mips16e-jrc.d: Tighten file format
	check, relax whitespace checking.

2005-11-14  David Ung  <davidu@mips.com>

	* gas/mips/mips.exp: Run new save/restore tests.
	* gas/testsuite/gas/mips/mips16e-save.s: New test for generating
	different styles of save/restore instructions.
	* gas/testsuite/gas/mips/mips16e-save.d: New.

2005-11-10  Jan Beulich  <jbeulich@novell.com>

	* gas/i386/intelbad.d: Add tests for ill registers in brackets.
	* gas/i386/intelbad.l: Adjust.

2005-11-10  Nick Clifton  <nickc@redhat.com>

	* gas/arm/archv6t2-bad.s: Add tests of badly composed ldrex and
	strex instructions.
	* gas/arm/archv6t2-bad.l: Add expected error messages.
	* gas/arm/r15-bad.l: Adjust error messages for r15 usage in ldrex
	and strex instructions.

2005-11-08  Arnold Metselaar  <arnold.metselaar@planet.nl>

	* gas/all/cofftag.s: Convert numbers in .type 
	directives to decimal.
	* gas/all/gas.exp: enable cofftag-test for z80-*-coff.

2005-11-08  Nathan Sidwell  <nathan@codesourcery.com>

	Add ms2.
	* gas/ms1/allinsn.d: Adjust pcrel disassembly.